<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application name-->
    <string name="app_name">MoneyLog</string>

    <!-- main activity button names-->
    <string name="budget_button_name">Budgets</string>
    <string name="account_button_name">Accounts</string>
    <string name="structure_button_name">Structure</string>
    <string name="reminder_button_name">Reminder</string>
    <string name="template_button_name">Templates</string>
    <string name="report_button_name">Reports</string>

    <!-- auth activity names-->
    <string name="login_label_name">Login</string>
    <string name="password_label_name">Password</string>
    <string name="remember_label_name">Remember me</string>
    <string name="enter_button_name">Enter</string>

    <!-- budget activity names -->
    <string name="add_budget_button_name">Add budget</string>

    <!-- add budget names -->
    <string name="budget_name_label">Name</string>
    <string name="budget_value_label">Value</string>
    <string name="budget_account_label">Default account</string>
    <string name="budget_comment_label">Comment</string>
    <string name="budget_save_button">Save</string>
    <string name="budget_create_button">Create</string>

    <!-- account activity names-->
    <string name="accaunt_balance">Balance:</string>
    <string name="account_limit">Limit:</string>
    <string name="add_account_button_name">Add account</string>

    <!-- DB constants-->
    <string name="db_name">moneylog.db</string>

</resources>
