<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/informationImage" android:layout_gravity="center|right" android:longClickable="true"
            android:focusableInTouchMode="false"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center">

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:orientation="horizontal"
                    android:gravity="center">
                <Button
                        android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/account_button_name"
                        android:id="@+id/btn_accounts" android:layout_gravity="left|center_vertical"
                        android:layout_column="0" android:layout_weight="1"
                        android:onClick="accountListButtonListener"/>
                <Button
                        android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/budget_button_name"
                        android:id="@+id/btn_budgets" android:layout_gravity="right|center_vertical"
                        android:layout_column="1" android:singleLine="false" android:onClick="budgetListButtonListener"
                        android:layout_weight="1"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:gravity="center" android:layout_weight="0">
                <Button android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/structure_button_name" android:id="@+id/btn_structure"
                        android:layout_gravity="center" android:singleLine="false" android:layout_column="0"
                        android:layout_weight="1"/>
                <Button android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/reminder_button_name" android:id="@+id/btn_reminder"
                        android:layout_gravity="center" android:layout_column="1" android:layout_weight="1"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:gravity="center">
                <Button android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/template_button_name" android:id="@+id/btn_templates"
                        android:layout_gravity="center" android:singleLine="false" android:layout_column="0"
                        android:layout_weight="1"/>
                <Button android:layout_width="@dimen/main_layout_button_width"
                        android:layout_height="@dimen/main_layout_button_height"
                        android:text="@string/report_button_name" android:id="@+id/btn_reports"
                        android:layout_gravity="center" android:layout_column="1" android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>

