<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_name_label"
                    android:id="@+id/textView" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText" android:autoText="true"
                    android:layout_span="1" android:layout_column="0" android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_value_label"
                    android:id="@+id/textView1" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center_vertical">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText1" android:layout_column="0" android:layout_weight="1"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView" android:src="@drawable/device_access_time"
                    android:baselineAlignBottom="false" android:longClickable="false" android:adjustViewBounds="false"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_account_label"
                    android:id="@+id/textView2" android:layout_column="0" android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/spinner" android:layout_column="0" android:layout_span="2"
                    android:focusable="true" android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_comment_label"
                    android:id="@+id/textView3" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:id="@+id/editText2" android:layout_column="0" android:layout_span="2"
                    android:clickable="true" android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_create_button"
                    android:id="@+id/button"
                    android:layout_column="0" android:layout_span="2" android:singleLine="false"
                    android:layout_weight="1" android:layout_marginTop="10dp" android:onClick="addOrUpdateBudget"/>
        </TableRow>
    </TableLayout>
</LinearLayout>